	* amiga-mui/mailtreelistclass-new.c: Added a SORT[12]MASK for the column flags.
	  The NoRecipient image will only be shown in a send-folder (as it was before).
	  Added the MUIA_MailTreelist_TitleClick2 for the secondary sort when shift-clicked
	  in the title row.
	  Corrected the parameter for the MUIM_DrawBackground calls.
	  Corrected the DrawEntry() call when not in bufferd drawing mode.
	* amiga-mui/mainwnd.c: Added the MUIA_MailTreelist_TitleClick2 for the secondary
	  sort when shift-clicked in the title row.

2007-01-31  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/gui_main.c: The TTEngine library wasn't closed.

2007-01-29  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: The marker was drawn wrong.

2007-01-28  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/configwnd.c, amiga-mui/gui_main.c, configuration.(c|h), 
	  doc/amiga/SimpleMail.guide, indep-include/configwnd.h, simplemail.c:
	  Added a new config option "Folder to display at startup".
	* amiga-mui/mailtreelistclass-new.c: Added newmouse wheel standard support.
	  The list is now using the standard list font setting from mui "Listviews".
	  The TileMarker is now considered in the calculation of the titlecolumnwidth and
	  the rendering of the titletext.
	  Added the display of the secondary sort (MUIA_MailTreelist_TitleMarker2).
	  Added support for the MUIA_MailTreelist_FolderType to display the correct address
	  and title in the FROMTO column.
	  Make sure the Active Entry is visible when setting it with MUIA_MailTreelist_Active.

2007-01-27  Bernd Gollesch <bgollesch@sime.at>
	* smakefile: Added "amiga-mui/mailtreelistclass-new.c" to the generated makefile
	  for SAS/C (yes, I'm still using it).

2006-12-24  Release Version 0.30

2006-03-04  Bernd Gollesch <bgollesch@sime.at>
	* text2html.c: Small bug fix if '@' is the first char of the buffer.

2006-02-09  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/configwnd.c: Removed wrong cast.